minor, message omitted

--- a/test/README.md.in
+++ b/test/README.md.in
@@ -890,7 +890,7 @@ results in
 
 ### FAQ
 
-+ I got 'GeneNotRecognized', what's wrong?
++ I got 'gene_not_recognized', what's wrong?
 
 Most likely you forgot to specify a transcipt definition such as `--ccds` or `--ensembl`. Sometimes there are non-canonical names for genes, this can be fixed through the `--alias` option and specify an alias table. TransVar comes with alias table from UCSC knownGene.
 
@@ -910,11 +910,11 @@ TransVar follows in full the HGVS nomenclature while annotating protein level mu
 
 ## Bug report and feature request
 
-If you find any bug (very likely due to the complexity of genomics:-)) or you wish any feature, please direct to Wanding Zhou <zhouwanding@gmail.com>. Thank you.
+Please direct any bugs to Wanding Zhou <zhouwanding@gmail.com>. Thank you for using TransVar.
 
 ## Reference
 
-We are working on an application note on this topic :-).
+submitted
 
 ## About
 This work is a collaboration between Wanding Zhou, Tenghui Chen, Zechen Chong and Professor Ken Chen at UT MD Anderson Cancer Center.
