--- a/test/README.md.in
+++ b/test/README.md.in
@@ -28,7 +28,7 @@ requires just Python 2.7.
 
 #### download the program
 
-current stable version: [2.0.3.20150409](https://bitbucket.org/wanding/transvar/get/v2.0.3.20150409.zip)
+current stable version: [v2.0.4.20150417](https://bitbucket.org/wanding/transvar/get/v2.0.4.20150417.zip)
 
 For previous versions, see [TAGS](https://bitbucket.org/wanding/transvar/overview#tags).
 
