minor, message omitted

--- a/test/README.md.in
+++ b/test/README.md.in
@@ -1,4 +1,4 @@
-**TransVar** is a versatile annotator for 3-way conversion and annotation among genomic characterization(s) of mutations (e.g., ```chr3:g.178936091G>A```) and transcript-dependent annotation(s) (e.g., ```PIK3CA:p.E545K``` or ```PIK3CA:c.1633G>A```). It is particularly designed with the functionality of resolving ambiguous mutation annotations arising from differential transcript usage. TransVar keeps awareness of the underlying unknown transcript structure (exon boundary, reference amino acid/base) while performing reverse annotation (from protein level to cDNA level).
+**TransVar** is a versatile annotator for 3-way conversion and annotation among genomic characterization(s) of mutations (e.g., `chr3:g.178936091G>A`) and transcript-dependent annotation(s) (e.g., `PIK3CA:p.E545K` or `PIK3CA:c.1633G>A`, or `NM_006218.2:p.E545K`). It is particularly designed with the functionality of resolving ambiguous mutation annotations arising from differential transcript usage. TransVar keeps awareness of the underlying unknown transcript structure (exon boundary, reference amino acid/base) while performing reverse annotation (from protein level to cDNA level).
 TransVar has the following features:
 
  + supports HGVS nomenclature
@@ -84,6 +84,7 @@ $ transvar panno -i 'NM_006218.2:p.E545K' --ucsc --ccds
 ```
 outputs
 ```
+#!text
 @
 ```
 
@@ -804,6 +805,7 @@ $ transvar ganno -i "chr2:g.234183372_234183383del" --ccds
 ```
 outputs
 ```
+#!text
 @
 ```
 
@@ -937,7 +939,7 @@ results in
 
 ### FAQ
 
-+ how can TransVar take VCF as input?
+#### how can TransVar take VCF as input?
 
 Yes. For example,
 ```
@@ -947,7 +949,7 @@ transvar ganno --vcf ALL.wgs.phase1_release_v3.20101123.snps_indel_sv.sites.vcf.
 transvar ganno --vcf demo.1kg.vcf --ccds
 ```
 
-+ Can TransVar automatically decompose a haplotype into multiple mutations?
+#### Can TransVar automatically decompose a haplotype into multiple mutations?
 
 Yes, TransVar performs local alignment to allow long haplotype to be decomposed into multiple mutations.
 
@@ -960,7 +962,7 @@ leads to 2 snv and one insertion
 @
 ```
 
-+ Can TransVar use 3-letter code instead of 1-letter code for protein?
+#### Can TransVar use 3-letter code instead of 1-letter code for protein?
 
 Yes, TransVar automatically infer whether the input is a 3-letter code or 1-letter code.
 The output is default to 1-letter code. But can be switched to 3-letter code through the `--aa3` option.
@@ -973,30 +975,30 @@ $ transvar panno --ccds -i 'PIK3CA:p.Glu545Lys' --aa3
 @
 ```
 
-+ Can TransVar report results in one line for each query?
+#### Can TransVar report results in one line for each query?
 
 Yes, with `--oneline` option. This separates the outputs from each transcript by '|||'.
 
-+ I got 'gene_not_recognized', what's wrong?
+#### I got 'gene_not_recognized', what's wrong?
 
 Most likely you forgot to specify a transcipt definition such as `--ccds` or `--ensembl`. Sometimes there are non-canonical names for genes, this can be fixed through the `--alias` option and specify an alias table. TransVar comes with alias table from UCSC knownGene.
 
-+ Does TransVar support alternative format for MNV such as ?
+#### Does TransVar support alternative format for MNV such as `c.508_509CC>TT`?
 
-Yes, but only in input. For example, `c.113delGinsTACTAGC`
+Yes, but only in input. For example, `c.508_509CC>TT`
 ```
 #!bash
-$ transvar canno --ccds -i 'A1CF:c.508_509delCCinsTT'
+$ transvar canno --ccds -i 'A1CF:c.508_509CC>TT'
 ```
 ```
 @
 ```
 
-+ Does TransVar support relaxed input without 'g.', 'c.' and 'p.'?
+#### Does TransVar support relaxed input without 'g.', 'c.' and 'p.'?
 
 Yes, the 'g.', 'c.' and 'p.' are optional in the input. For example, `12:109702119insACC` is equally acceptable as `chr12:g.109702119_109702120insACC`. TransVar also accepts '>' in denoting MNV. E.g., `c.113G>TACTAGC` can be used in place of `c.113delGinsTACTAGC`. This is common in some database such as COSMIC.
 
-+ When I annotate a variant for protein identifier, why would I end up getting results in another variant type?
+#### When I annotate a variant for protein identifier, why would I end up getting results in another variant type?
 
 TransVar follows in full the HGVS nomenclature while annotating protein level mutation identifiers. For example, a out-of-phase, in frame insertion, `ACIN1:c.1930_1931insATTCAC` will be annotated with `p.S643_R644insHS` rather than `R644delinsHSR`. Protein level mutation will be generated as if no nucleotide mutation information exists.
 
