--- a/external/samtools/Makefile
+++ b/external/samtools/Makefile
@@ -23,7 +23,7 @@
 
 CC       = gcc
 CPPFLAGS = $(DFLAGS) $(INCLUDES)
-CFLAGS   = -g -Wall -O2
+CFLAGS   = -g -O2 # -Wall 
 LDFLAGS  =
 LDLIBS   =
 DFLAGS=     -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -D_CURSES_LIB=1
