minor, message omitted

--- a/test/README.md.in
+++ b/test/README.md.in
@@ -1009,7 +1009,6 @@ TransVar follows in full the HGVS nomenclature while annotating protein level mu
  + imprecise annotation
  + forward annotation of binding sites
  + forward annotation of structural variation breakpoints
- + begin codon and end codon in deletion
  + distinguish non-transcribable element and suppress promoter setting (like "retained intron")
 
 ## Bug report and feature request
@@ -1021,6 +1020,6 @@ Please direct any bugs to <zhouwanding@gmail.com>.
 submitted
 
 ## About
-This work is a collaboration between Wanding Zhou, Tenghui Chen, Zechen Chong and Professor Ken Chen at UT MD Anderson Cancer Center.
+This work is a collaboration between Wanding Zhou, Tenghui Chen, Zechen Chong and Professor Ken Chen at The University of Texas, MD Anderson Cancer Center.
 
 
