--- a/test/README.md.in
+++ b/test/README.md.in
@@ -1049,7 +1049,7 @@ Please direct any bugs to <zhouwanding@gmail.com>.
 
 ## Reference
 
-submitted
+[Zhou et al. Nature Methods 12, 1002-1003 (2015)](http://www.nature.com/nmeth/journal/v12/n11/full/nmeth.3622.html)
 
 ## About
 This work is a collaboration between Wanding Zhou, Tenghui Chen, Zechen Chong and Professor Ken Chen at The University of Texas, MD Anderson Cancer Center.
