--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7
 MAINTAINER Wanding Zhou <zhouwanding@gmail.com>
 
-ENV TRANSVAR_VERSION==2.4.5.20190121
-RUN pip install transvar && \
-	transvar config --download_anno --refversion hg38
+ENV TRANSVAR_VERSION==2.4.6.20190121
+RUN pip install transvar==${TRANSVAR_VERSION} && \
+	transvar config --download_anno --refversion hg38 --skip-reference
 
 CMD ['/bin/bash']
 
